--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,1 +1,3 @@
-<p>main-page works!</p>
+<div class="flex-row main">
+  <app-character *ngFor="let char of chars" [id]="char"></app-character>
+</div>
