--- a/src/app/character/character.component.scss
+++ b/src/app/character/character.component.scss
@@ -57,3 +57,16 @@
     width: 24px;
   }
 }
+
+.uncommon {
+  color: #1fc219;
+}
+
+.rare {
+  color: #4990e2;
+}
+
+.very-rare {
+  color: #9810e0;
+}
+
