--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,24 +1,24 @@
 <div class="flex-col container" *ngIf="loaded">
   <div class="flex-row-start header">
-    <img class="ava" [src]="char.decorations.avatarUrl">
+    <img class="ava" [src]="char.decorations.avatarUrl" (dblclick)="hide()">
     <div class="flex-row-space">
-      <b class="name">{{char.name}}</b>
+      <b class="name">{{name}}</b>
       <div class="flex-row">
         <img class="coin" src="https://ultrapro.com/cdn/shop/products/18995_Poly_WaterdeepCoin_D_D_goldback_1024x.png?v=1687542854">
-        <b>{{money()}}</b>
+        <b>{{money}}</b>
+          <!-- <span class="font10">{{char.currencies.ep}}</span> -->
       </div>
     </div>
   </div>
  
 
   <mat-progress-bar class="hp" mode="determinate" [value]="valHP()"></mat-progress-bar> 
-  <b class="hp-text">{{curHP() + ' / ' + maxHP()}}</b>
+  <b class="hp-text">{{curHP + ' / ' + maxHP}}</b>
 
 
   <div class="flex-row-space inventory-header">
-    <b>Max {{maxWeight()}}lb</b>
+    <b [class.red]="weightPers()>100" [class.orange]="weightPers()>70">Max: {{toKg(maxWeight)}}kg / {{weightPers()}}%</b>
     <div class="flex-row weight">
-      <b class="s1">{{''}}</b>
       <b class="s2">{{(allWeight(equipment) + allWeight(backpack)) + 'lb'}}</b>
       <b class="s3">{{toKg(allWeight(equipment) + allWeight(backpack)) + 'kg'}}</b>
     </div>
@@ -44,6 +44,16 @@
     </div>
   </div>
 
+  <div class="flex-col-start inventory-list">
+    <div class="flex-row-space item italic" *ngFor="let item of char.customItems">
+      <span>{{item.name}}</span>
+      <div class="flex-row weight">
+        <span *ngIf="item.quantity > 1" class="s1">{{item.quantity > 1 ? 'x' + item.quantity : ''}}</span>
+        <span class="s2">{{item.weight * item.quantity}}</span>
+        <span class="s3">{{roundOne(toKg(item.weight * item.quantity))}}</span>
+      </div>
+    </div>
+  </div>
 
 
   <div class="flex-row-space inventory-header" *ngIf="bag.length > 0">
