--- a/src/app/character/character.component.scss
+++ b/src/app/character/character.component.scss
@@ -1,3 +1,7 @@
+.font10 {
+  font-size: 10px;
+}
+
 .container {
   margin: 8px 4px;
   padding: 8px;
@@ -8,7 +12,7 @@
     align-items: center;
 
     .name {
-     margin-left: 16px;
+     margin-left: 10px;
      font-size: 16px;
     }
   
@@ -16,12 +20,6 @@
       width: 50px;
       height: 50px;
       object-fit: cover;
-    }
-
-    .coin {
-      margin-top: 1px;
-      width: 19px;
-      height: 19px;
     }
   }
 
@@ -70,3 +68,14 @@
   color: #9810e0;
 }
 
+.italic {
+  font-style: italic;
+}
+
+.red {
+  color: #da0404 !important;
+}
+
+.orange {
+  color: #e29e20;
+}
