--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -5,3 +5,10 @@
     flex: 1 1 0px;
   }
 }
+
+.hiden-block {
+  margin: 4px;
+  padding: 4px 8px;
+  background-color: white;
+  border-radius: 4px;
+}
